Added new adders and removers for player stats - Uses an enum var to get the stat to add to - Getter may still be needed - Needs testing